[gd_scene load_steps=14 format=2]

[ext_resource path="res://Interface/EndingCutscene/EndingCutscene.gd" type="Script" id=1]
[ext_resource path="res://Interface/IntroCutscene/DialogueBox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Interface/IntroCutscene/boss_voice_2.wav" type="AudioStream" id=3]
[ext_resource path="res://Interface/Theme_Main.tres" type="Theme" id=4]
[ext_resource path="res://Interface/Assets/HopeGold.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Interface/Assets/retro-pixel-thick.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Hats/TopHat/locked_btn.png" type="Texture" id=7]
[ext_resource path="res://Interface/Assets/ButtonSounds.gd" type="Script" id=8]
[ext_resource path="res://Audio/Music/bad_mechanic_credits.ogg" type="AudioStream" id=9]

[sub_resource type="Animation" id=5]
resource_name = "show_score"

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 6 )

[sub_resource type="AudioStreamRandomPitch" id=4]
audio_stream = ExtResource( 3 )

[node name="EndCutscene" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 4 )
script = ExtResource( 1 )

[node name="Animator" type="AnimationPlayer" parent="."]
anims/show_score = SubResource( 5 )

[node name="MenuInfo" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="HBox" type="HBoxContainer" parent="MenuInfo"]
margin_left = 10.0
margin_top = 10.0
margin_right = 310.0
margin_bottom = 230.0
rect_min_size = Vector2( 0, 30 )

[node name="Hat" type="CenterContainer" parent="MenuInfo/HBox"]
margin_top = 190.0
margin_right = 30.0
margin_bottom = 220.0
rect_min_size = Vector2( 30, 30 )
size_flags_vertical = 8

[node name="Control" type="Control" parent="MenuInfo/HBox/Hat"]
margin_left = 15.0
margin_top = 15.0
margin_right = 15.0
margin_bottom = 15.0

[node name="HatSprite" type="Sprite" parent="MenuInfo/HBox/Hat/Control"]
unique_name_in_owner = true
scale = Vector2( 2, 2 )
texture = ExtResource( 7 )

[node name="TimeText" type="Label" parent="MenuInfo/HBox"]
unique_name_in_owner = true
margin_left = 34.0
margin_top = 206.0
margin_right = 300.0
margin_bottom = 220.0
size_flags_horizontal = 3
size_flags_vertical = 8
text = "20:00"
align = 2
valign = 2

[node name="ButtonContainer" type="CenterContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -160.0
margin_top = -50.0
margin_right = 160.0
rect_min_size = Vector2( 0, 50 )

[node name="Hooray" type="Button" parent="ButtonContainer"]
margin_left = 110.0
margin_top = 17.0
margin_right = 210.0
margin_bottom = 33.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Hooray!"
script = ExtResource( 8 )

[node name="Black2" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.101961, 0.0980392, 0.196078, 1 )

[node name="Scoreboard" type="VBoxContainer" parent="."]
anchor_right = 1.0
margin_bottom = 100.0
custom_constants/separation = 0

[node name="Padding" type="Control" parent="Scoreboard"]
margin_right = 320.0
margin_bottom = 5.0
rect_min_size = Vector2( 0, 5 )

[node name="Bonusboard" type="PanelContainer" parent="Scoreboard"]
margin_left = 73.0
margin_top = 5.0
margin_right = 247.0
margin_bottom = 144.0
size_flags_horizontal = 4

[node name="VBox" type="VBoxContainer" parent="Scoreboard/Bonusboard"]
margin_left = 5.0
margin_top = 5.0
margin_right = 169.0
margin_bottom = 133.0

[node name="Label" type="Label" parent="Scoreboard/Bonusboard/VBox"]
margin_right = 164.0
margin_bottom = 14.0
text = "SCORE BONUS"
align = 1

[node name="Bonuses" type="HBoxContainer" parent="Scoreboard/Bonusboard/VBox"]
margin_top = 18.0
margin_right = 164.0
margin_bottom = 128.0
alignment = 1

[node name="BonusLabels" type="Label" parent="Scoreboard/Bonusboard/VBox/Bonuses"]
unique_name_in_owner = true
margin_right = 100.0
margin_bottom = 110.0
rect_min_size = Vector2( 100, 110 )
custom_fonts/font = SubResource( 6 )
text = "Cash Left
Health Left
Seconds Skipped
Towers placed
Towers Unlocked
Items Unlocked
Cash Miss Rate"

[node name="Colons" type="Label" parent="Scoreboard/Bonusboard/VBox/Bonuses"]
visible = false
margin_left = 104.0
margin_right = 107.0
margin_bottom = 95.0
rect_min_size = Vector2( 0, 95 )
custom_fonts/font = SubResource( 6 )
text = ":
:
:
:
:
:"

[node name="Points" type="Label" parent="Scoreboard/Bonusboard/VBox/Bonuses"]
unique_name_in_owner = true
margin_left = 104.0
margin_right = 164.0
margin_bottom = 110.0
rect_min_size = Vector2( 60, 110 )
custom_fonts/font = SubResource( 6 )
text = "1000
15000
2000
46000
3000
4200
x1.2"
align = 2

[node name="ScoreContainer" type="HBoxContainer" parent="Scoreboard"]
margin_top = 144.0
margin_right = 320.0
margin_bottom = 158.0
alignment = 1

[node name="ScoreLabel" type="Label" parent="Scoreboard/ScoreContainer"]
margin_left = 78.0
margin_right = 138.0
margin_bottom = 14.0
rect_min_size = Vector2( 60, 0 )
text = "Score:"

[node name="Score" type="Label" parent="Scoreboard/ScoreContainer"]
unique_name_in_owner = true
margin_left = 142.0
margin_right = 242.0
margin_bottom = 14.0
rect_min_size = Vector2( 100, 0 )
text = "1000"
align = 2

[node name="Padding2" type="Control" parent="Scoreboard"]
margin_top = 158.0
margin_right = 320.0
margin_bottom = 163.0
rect_min_size = Vector2( 0, 5 )

[node name="JobLabel" type="Label" parent="Scoreboard"]
unique_name_in_owner = true
margin_top = 163.0
margin_right = 320.0
margin_bottom = 183.0
custom_fonts/font = SubResource( 7 )
align = 1

[node name="Black" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="Dialogue" parent="." instance=ExtResource( 2 )]
unique_name_in_owner = true
messages = [ "Great work Joe! I can't believe you made it out of there.", "You've been promoted..." ]
speaker = "Boss"
talk_sounds = [ SubResource( 4 ) ]
read_speed = 0.1
auto_start = false

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -4.0
bus = "Music"

[node name="Score" type="AudioStreamPlayer" parent="."]

[connection signal="pressed" from="ButtonContainer/Hooray" to="." method="_on_Hooray_pressed"]
